Finalizing certain elements Final element IDs to reduce css size with the intention to separate en and jp to be W3C-compliant. Padding and width changes especially to fix elements on mobile view. Final background gradient.

--- a/assets/noscript.css
+++ b/assets/noscript.css
@@ -9,10 +9,3 @@ body:after {
 #main > .inner {
 	opacity: 1.0 !important;
 }
-
-#main > .inner > section {
-	opacity: 1.0 !important;
-	transform: none !important;
-	transition: none !important;
-	filter: none !important;
-}
